--- a/app/index.html
+++ b/app/index.html
@@ -4,17 +4,35 @@
 <head>
   <title>Pluralsight AngularJS Fundamentals Course</title>
   <link rel="stylesheet" href="css/main.css" >
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/bootstrap/3.2.0/css/bootstrap.min.css" >
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/bootstrap/3.2.0/css/bootstrap-theme.css" >
 </head>
 
-<body ng-controller="HelloController">
+<body ng-controller="EventController">
 
-  <div>
-    <h1>{{ message }}</h1>
+  <div class="container">
+    <div class="navbar">
+      <div class="navbar-inner">
+        <ul class="nav">
+          <li>a</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="row">
+      <h2>{{ event.name }}</h2>
+      <p>{{ event.date }}</p>
+      <p>{{ event.time }}</p>
+      <address>
+        {{event.location.address}} - {{event.location.city }} - {{event.location.province}}
+      </address>
+    </div>
+
   </div>
 
-  <script src="../bower_components/angular/angular.js"></script>
-  <script src="../bower_components/angular-resource/angular-resource.js"></script>
-  <script src="../bower_components/angular-route/angular-route.js"></script>
+  <script src="//cdn.jsdelivr.net/angularjs/1.2.20/angular.min.js"></script>
+  <script src="//cdn.jsdelivr.net/angularjs/1.2.20/angular-resource.min.js"></script>
+  <script src="//cdn.jsdelivr.net/angularjs/1.2.20/angular-route.min.js"></script>
   <script src="js/main.bundle.js"></script>
 
 </body>
