--- a/app/EventDetails.html
+++ b/app/EventDetails.html
@@ -3,21 +3,82 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/bootstrap/3.2.0/css/bootstrap-theme.css">
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/bootstrap/3.2.0/css/bootstrap-theme.css" >
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/bootstrap/3.2.0/css/bootstrap.min.css" >
   <link rel="stylesheet" href="css/main.css" >
 </head>
-<body>
+<body ng-cloak ng-controller="EventController">
+
   <div class="container">
-    <div ng-controller="EventController">
-      {{ event.name }} <br>
-      {{ event.date }} <br>
-      {{ event.time }}
+    <div class="navbar navbar-default">
+      <div class="navbar-inner">
+        <ul class="nav">
+          <li>a</li>
+        </ul>
+      </div>
     </div>
+
+    <div class="row">
+      <h2 ng-bind-template="{{event.name}} {{ event.date}}"></h2>
+      <div class="col-md-4">
+        <p>{{ event.date }}</p>
+        <p>{{ event.time }}</p>
+      </div>
+
+      <button class="btn" ng-disabled="buttonDisabled">Disabled</button>
+
+      <address class="col-md-4">
+        {{event.location.address}} - {{event.location.city }} - {{event.location.province}}
+      </address>
+
+      <div class="col-md-12">
+        <hr>
+
+        <h3>Sessions</h3>
+        Order by:
+        <select ng-model="sortorder" class="input-small">
+          <option selected value="name">Name</option>
+          <option value="-upVoteCount">Votes</option>
+        </select>
+        <select ng-model="query.level" class="input-small">
+          <option selected value="">All</option>
+          <option value="introductory">Introductory</option>
+          <option value="intermediate">Intermediate</option>
+          <option value="advanced">Advanced</option>
+        </select>
+        <ul class="thumbnails">
+          <li ng-repeat="session in event.sessions | orderBy:sortorder | filter:query ">
+            <div class="span0 well votingWidget">
+              <div class="votingButton" ng-click="upVoteSession(session)">
+                <i class="icon-chevron-up"></i>
+                up
+              </div>
+              <div class="badge badge-inverse">
+                <div>{{ session.upVoteCount }}</div>
+              </div>
+              <div class="votingButton" ng-click="downVoteSession(session)">
+                <i class="icon-chevron-down"></i>
+                down
+              </div>
+            </div>
+            <h4>{{ session.name }}</h4>
+            <h6>{{ session.creatorName }}</h6>
+            <span>Duration: {{ session.duration }}</span>
+            <span>Level: {{ session.level }}</span>
+            <p>{{ session.abstract }}</p>
+          </li>
+        </ul>
+      </div>
+
+
+    </div>
+
   </div>
 
   <script src="../bower_components/angular/angular.js"></script>
   <script src="../bower_components/angular-resource/angular-resource.js"></script>
   <script src="../bower_components/angular-route/angular-route.js"></script>
+  <script src="//cdn.jsdelivr.net/angularjs/1.2.20/angular-sanitize.min.js"></script>
   <script src="js/main.bundle.js"></script>
 
 </body>
