--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,7 @@
 <head>
   <title>Pluralsight AngularJS Fundamentals Course</title>
   <link rel="stylesheet" href="css/main.css" >
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/bootstrap/3.2.0/css/bootstrap.min.css" >
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/bootstrap/3.2.0/css/bootstrap-theme.css" >
+  <link rel="stylesheet" href="css/bootstrap.min.css" >
 </head>
 
 <body ng-controller="EventController">
