--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,7 @@
 
   </div>
 
+  <script src="//cdn.jsdelivr.net/jquery/2.1.1/jquery.min.js"></script>
   <script src="js/vendor.bundle.js"></script>
   <script src="js/main.bundle.js"></script>
 
